fix subscribe button on mobile

--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -403,4 +403,7 @@ footer {
 .subscribe.button {
   margin-top: 1em;
   font-size: 1.4em;
+  @include gridle_state(small) {
+    font-size: 1em;
+  }
 }
